G2P-4658  Keycloak integrated.
